# OmniTerm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CPU.20260707.154408.1412858.0.001.cpuprofile  Cargo.toml  Dockerfile  Dockerfile.release  PROGRESS.md  README.md  README_En.md  README_zh.md  RELEASE_NOTES.md  branch.config.example  build.rs  dev.ps1  dev.sh  docker-compose.yml  install.ps1  install.sh  omniterm.db.bak
.dev/: backend.pid  frontend.pid
.github/: release-notes-template.md  release-notes.md
.github/workflows/: release.yml
.pi/extensions/: auto-pull.ts
.qoder/: settings.json  settings.local.json
docs/: 2026-06-20-sidebar-redesign-design.md  agent-edit-manual.md  architecture-frontend.md  branch-workflows.md  debug-log.md  frontend-patterns.md  proposal-performance-optimization.md  proposal-project-workspace.md  psmux-spike-results.md  references.md  release-guide.md  release-plan.md  requirements.md  ui-style-guide.md  user-testing.md  windows-support.md  worktree-setup.md  像素风格方案.md
docs/architecture/: backend.md  frontend-patterns.md  frontend.md
docs/dev/: bug-progress-2026-07-08-terminal-stuck.md  debug-log.md  performance-baseline.md
docs/dev/plans/: 2026-07-12-acp-integration-plan.md  2026-07-15-acp-integration-execution.md  2026-07-16-inotify-leak-investigation.md  2026-07-19-acp-session-persistence.md  2026-07-20-acp-quality-gap.md  performance-optimization.md  tech-debt-cleanup-2026-07-06.md
docs/dev/plans/backlog/: giant-components.md  (+3 more)
docs/micropowers/plans/: 2026-07-01-external-sessions.md
docs/reference/: acp-protocol-reference.md  auth-not-enforced.md  requirements.md  user-testing.md
docs/superpowers/plans/: 2026-06-22-fm-session-follow.md  2026-06-23-i18n.md  2026-06-24-light-theme-and-settings-buttons.md  2026-06-24-settings-popup.md  2026-06-25-keybinding-mode-and-copy-on-select.md  2026-06-27-fm-workspace-tracking.md  2026-06-27-new-project-modal.md  2026-06-28-mobile-ux.md  2026-07-01-pixel-style-phase1.md  2026-07-01-pixel-style-phase2.md  2026-07-02-pixel-phase3.md
docs/superpowers/specs/: 2026-06-22-fm-session-follow-design.md  2026-06-23-file-viewer-editor-design.md  2026-06-23-i18n-design.md  2026-06-24-light-theme-and-settings-buttons-design.md  2026-06-24-settings-popup-design.md  2026-06-27-fm-workspace-tracking-design.md  2026-06-27-new-project-modal-design.md  2026-06-28-mobile-ux-design.md  2026-07-01-pixel-style-redesign-design.md  2026-07-02-pixel-phase3-design.md
docs/visual-design/: ui-style-guide.md
docs/workflows/: agent-edit-manual.md  branch-rearrange-plan.md  branch-workflows.md  release-guide.md  worktree-setup.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  cubone-file-manager.d.ts  i18n.ts  index.css  version.ts
frontend/src/api/: client.ts
frontend/src/hooks/: useAcpChat.ts  useAnchorPopup.ts  useAttention.ts  useFileWatcher.ts  useImmersive.ts  useMediaQuery.ts  useTerminal.ts
frontend/src/stores/: acpConnectionStore.ts  agentStore.ts  appStore.test.ts  appStore.ts  chatStore.ts  themeStore.ts  toastStore.ts
frontend/src/test/: setup.ts
frontend/src/utils/: audioFeedback.ts  fonts.ts  path.ts  pixelAnimations.ts  terminalInputMode.test.ts  terminalInputMode.ts
migrations/: 20260620_init.sql  20260625_workspace_to_project.sql  20260715_add_runtime_kind.sql  20260716_add_agents_table.sql  20260717_remove_api_key_from_agents.sql  20260719_chat_messages.sql
npm/: install.js  package.json  shim.js
npm-package/: install.js  package.json  shim.js
openspec/: config.yaml
scripts/: bump-version.sh  check-doc-index.sh  extract-release-notes.sh  sync-main.sh  sync-release.sh  verify-inotify-fix.sh
scripts/hooks/: pre-commit
src/: embedded.rs  main.rs  workspaces.rs
src/acp/: chat_persistence.rs  client.rs  handler.rs  mod.rs  permission.rs  reaper.rs  supervisor.rs  terminal.rs
src/api/: agents.rs  auth.rs  files.rs  files_watch.rs  health.rs  hooks.rs  mod.rs  projects.rs  sessions.rs  system.rs  targets.rs  workspaces.rs
src/auth/: mod.rs
src/fs/: mod.rs
src/git/: mod.rs
src/models/: agent.rs  mod.rs  project.rs  session.rs  target.rs  user.rs  workspace.rs
src/tmux/: agent_hooks.rs  agent_state.rs  control_mode.rs  hooks.rs  mod.rs  process_info.rs  pty_io.rs
src/utils/: path.rs
src/ws/: acp.rs  mod.rs  terminal.rs
tests/: agent_hook_integration.rs  runtime_kind_migration.rs
(+110 files in other folders)
