[package]
name = "omniterm"
version = "0.1.7"
edition = "2024"
license = "Apache-2.0"
description = "Web-based tmux terminal manager with AI agent monitoring"
include = ["src/**", "migrations/**", "frontend/dist/**", "build.rs", "README.md", "LICENSE", "!frontend/node_modules/**"]

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
jsonwebtoken = "9"
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
portable-pty = "0.9"
futures-util = "0.3"
notify = "7"
async-stream = "0.3"
sha1 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
rust-embed = "8"
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.35"
windows-sys = { version = "0.60", features = ["Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
